--- a/LoanCalculator/Properties/launchSettings.json
+++ b/LoanCalculator/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -10,15 +10,17 @@
   "profiles": {
     "LoanCalculator": {
       "commandName": "Project",
+      "workingDirectory": "C:\\Users\\benja\\source\\repos\\LoanCalculator\\LoanCalculator",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7068;http://localhost:5068",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.SpaProxy"
-      }
+      },
+      "applicationUrl": "https://localhost:7068;http://localhost:5068"
     },
     "IIS Express": {
       "commandName": "IISExpress",
+      "workingDirectory": "C:\\Users\\benja\\source\\repos\\LoanCalculator\\LoanCalculator",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
