Different loans now implement ILoan, and they can compute the installments in different ways.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/LoanCalculator/v17
+/.vs/LoanCalculator/config
