--- a/LoanCalculator/Properties/launchSettings.json
+++ b/LoanCalculator/Properties/launchSettings.json
@@ -10,13 +10,13 @@
   "profiles": {
     "LoanCalculator": {
       "commandName": "Project",
-      "workingDirectory": "C:\\Users\\benja\\source\\repos\\LoanCalculator\\LoanCalculator",
+      "workingDirectory": "/Users/benjamin/Projects/LoanCalculator/LoanCalculator",
       "launchBrowser": true,
+      "applicationUrl": "https://localhost:7068;http://localhost:5068",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.SpaProxy"
-      },
-      "applicationUrl": "https://localhost:7068;http://localhost:5068"
+      }
     },
     "IIS Express": {
       "commandName": "IISExpress",
